--- a/consultant_back/requirements.txt
+++ b/consultant_back/requirements.txt
@@ -7,6 +7,7 @@ django-cors-headers==4.3.0
 django-environ==0.11.2
 django-filter==23.3
 djangorestframework==3.14.0
+exceptiongroup==1.1.3
 google-api-core==2.14.0
 google-auth==2.23.4
 google-cloud-bigquery==3.13.0
@@ -17,19 +18,23 @@ googleapis-common-protos==1.61.0
 grpcio==1.59.2
 grpcio-status==1.59.2
 idna==3.4
+iniconfig==2.0.0
 Markdown==3.5.1
 packaging==23.2
+pluggy==1.3.0
 proto-plus==1.22.3
 protobuf==4.25.0
 psycopg2-binary==2.9.9
 pyasn1==0.5.0
 pyasn1-modules==0.3.0
 pycodestyle==2.11.1
+pytest==7.4.3
 python-dateutil==2.8.2
 pytz==2023.3.post1
 requests==2.31.0
 rsa==4.9
 six==1.16.0
 sqlparse==0.4.4
+tomli==2.0.1
 typing_extensions==4.8.0
 urllib3==2.0.7
